k8s_legacy/platform/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: selmag-keycloak-svc
  namespace: selmag
spec:
  type: ClusterIP
  selector:
    app: selmag-keycloak
  ports:
    - name: http
      port: 8080
      targetPort: http
