k8s_legacy/platform/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: selmag-keycloak-ingress
  namespace: selmag
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/preserve-host: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: keycloak.selm.ag.192.168.49.2.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: selmag-keycloak-svc
                port:
                  name: http
